actualización de h3 en contacto.html

--- a/contacto.html
+++ b/contacto.html
@@ -12,5 +12,8 @@
     <p>
         "        Hola mi amor como estas        "
     </p>
+    <h3>
+        Sexo duro contra el muro jijiji
+    </h3>
 </body>
 </html>
