add h1,h2,h3 to inicio page

--- a/inicio.html
+++ b/inicio.html
@@ -9,5 +9,9 @@
 <body>
     
     <h1> Hola cara de cola</h1>
+
+    <h1>titulo 1</h1>
+    <h2>Titulo 2</h2>
+    <H3>Titulo 3</H3>
 </body>
 </html>
